# mypy-config-generator

./: CHANGELOG.md  README-DEV.MD  README.md  pyproject.toml
.github/workflows/: execute.yml  pr-checker.yml
src/mypy_config_generator/: configuration.py  downloader.py  generator.py  main.py
workdir/: mypy.ini  mypy_adjusted.ini  settings.html
