[project]
name = "mypy-config-generator"
description = "Generates mypy configuration"
version = "0.1.0-dev"
authors = [
    { name = "KRunchPL", email = "krunchfrompoland@gmail.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = []

[project.urls]
homepage = "https://github.com/KRunchPL/mypy-config-generator"
repository = "https://github.com/KRunchPL/mypy-config-generator"
documentation = "https://github.com/KRunchPL/mypy-config-generator"

[tool.hatch.build.targets.wheel]
packages = [
    "src/mypy_config_generator",
]

[dependency-groups]
dev = [
    "darglint >=1.8.1,<2",
    "flake8 >=7.1.1,<8",
    "mypy >=1.15.0,<1.16.0",
    "pytest >=8.3.4,<9",
    "pytest-cov >=6.0.0,<7",
    "pytest-mock >=3.14.0,<4",
    "ruff >=0.9.5,<0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
